<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/sanguine_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/sanguine_group_label"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/sanguine_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sanguine_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/sanguine_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sanguine_group_label">

            <com.google.android.material.chip.Chip
                android:id="@id/carefree"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_carefree" />

            <com.google.android.material.chip.Chip
                android:id="@id/easygoing"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_easygoing" />

            <com.google.android.material.chip.Chip
                android:id="@id/leadership"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_leadership" />

            <com.google.android.material.chip.Chip
                android:id="@id/lively"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_lively" />

            <com.google.android.material.chip.Chip
                android:id="@id/outgoing"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_outgoing" />

            <com.google.android.material.chip.Chip
                android:id="@id/responsive"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_responsive" />

            <com.google.android.material.chip.Chip
                android:id="@id/sociable"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_sociable" />

            <com.google.android.material.chip.Chip
                android:id="@id/talkative"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanguine_talkative" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/sanguine_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/choleric_group_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sanguine_group" />

        <TextView
            android:id="@+id/choleric_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/choleric_group_label"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/choleric_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sanguine_divider" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/choleric_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/choleric_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choleric_group_label">

            <com.google.android.material.chip.Chip
                android:id="@id/touchy"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_touchy" />

            <com.google.android.material.chip.Chip
                android:id="@id/active"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_active" />

            <com.google.android.material.chip.Chip
                android:id="@id/aggressive"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_aggressive" />

            <com.google.android.material.chip.Chip
                android:id="@id/changeable"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_changeable" />

            <com.google.android.material.chip.Chip
                android:id="@id/excitable"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_excitable" />

            <com.google.android.material.chip.Chip
                android:id="@id/impulsive"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_impulsive" />

            <com.google.android.material.chip.Chip
                android:id="@id/optimistic"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_optimistic" />

            <com.google.android.material.chip.Chip
                android:id="@id/restless"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choleric_restless" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/choleric_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/phlegmatic_group_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choleric_group" />

        <TextView
            android:id="@+id/phlegmatic_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/phlegmatic_group_label"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/phlegmatic_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choleric_divider" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/phlegmatic_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/phlegmatic_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phlegmatic_group_label">

            <com.google.android.material.chip.Chip
                android:id="@id/calm"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_calm" />

            <com.google.android.material.chip.Chip
                android:id="@id/even_tempered"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_even_tempered" />

            <com.google.android.material.chip.Chip
                android:id="@id/reliable"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_reliable" />

            <com.google.android.material.chip.Chip
                android:id="@id/controlled"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_controlled" />

            <com.google.android.material.chip.Chip
                android:id="@id/peaceful"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_peaceful" />

            <com.google.android.material.chip.Chip
                android:id="@id/thoughtful"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_thoughtful" />

            <com.google.android.material.chip.Chip
                android:id="@id/careful"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_careful" />

            <com.google.android.material.chip.Chip
                android:id="@id/passive"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phlegmatic_passive" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/phlegmatic_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/melancholic_group_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phlegmatic_group" />

        <TextView
            android:id="@+id/melancholic_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/melancholic_group_label"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/melancholic_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phlegmatic_divider" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/melancholic_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/melancholic_group_label">

            <com.google.android.material.chip.Chip
                android:id="@id/quiet"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_quiet" />

            <com.google.android.material.chip.Chip
                android:id="@id/unsociable"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_Unsociable" />

            <com.google.android.material.chip.Chip
                android:id="@id/reserved"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_reserved" />

            <com.google.android.material.chip.Chip
                android:id="@id/pessimistic"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_pessimistic" />

            <com.google.android.material.chip.Chip
                android:id="@id/sober"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_sober" />

            <com.google.android.material.chip.Chip
                android:id="@id/rigid"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_rigid" />

            <com.google.android.material.chip.Chip
                android:id="@id/anxious"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_anxious" />

            <com.google.android.material.chip.Chip
                android:id="@id/moody"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melancholic_moody" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/melancholic_group"
            android:text="@string/button_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>